fix: move tasklist caret for visibility

--- a/src/components/TaskList/TaskList.module.css
+++ b/src/components/TaskList/TaskList.module.css
@@ -48,3 +48,12 @@
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
 }
+
+@media screen and (max-width: 768px) {
+  .arrow {
+    justify-content: flex-end;
+  }
+  .arrow > svg {
+    margin-right: 1rem;
+  }
+}
